prevent body from moving with scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 
 html {
     font-size: 62.5%;
+    overflow-y: scroll;
 }
 
 body {
